Prevent Zoom on Mobile

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -10,7 +10,7 @@
     padding: 25px;
     gap: 25px;
     font-weight: 1000;
-    margin-bottom: 50px;
+    margin-bottom: 5%;
 }
 
 .navbar-links {
@@ -55,6 +55,12 @@
 
 .register h3:hover {
     color: rgb(219, 218, 218);
+}
+
+@media (max-width: 1000px) {
+    .navBar {
+        margin-bottom: 0;
+    }
 }
 
 @media (max-width: 500px) {
