--- a/src/styles/heroText.css
+++ b/src/styles/heroText.css
@@ -12,7 +12,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 50px;
     color: rgb(243, 243, 243);
 }
 
